[gd_scene load_steps=4 format=3 uid="uid://cwqkbc3c5odpn"]

[ext_resource type="Script" path="res://Scenes/Cut_Scenes/text_box_3.gd" id="1_0a1ht"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14rcg"]
bg_color = Color(0.290196, 0.0588235, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.529412, 0.458824, 0.313726, 1)

[sub_resource type="SystemFont" id="SystemFont_0a75u"]
font_names = PackedStringArray("", "Marlett")
subpixel_positioning = 0

[node name="Textbox3" type="Node2D"]
texture_filter = 1
position = Vector2(564, 633)
script = ExtResource("1_0a1ht")

[node name="next_message" type="Timer" parent="."]

[node name="next_char" type="Timer" parent="."]
wait_time = 2.0

[node name="TextboxContainer" type="MarginContainer" parent="."]
layout_direction = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -158.0
offset_right = -76.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_14rcg")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(17, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_0a75u")
theme_override_font_sizes/font_size = 40
text = "*

"

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(934, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = SubResource("SystemFont_0a75u")
theme_override_font_sizes/font_size = 40
text = "
"
autowrap_mode = 2
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(17, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_0a75u")
theme_override_font_sizes/font_size = 40
text = " 
*"

[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
